--- a/QuanLiNhanVien/web/WEB-INF/views/view.html
+++ b/QuanLiNhanVien/web/WEB-INF/views/view.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="layout :: head"></head>
 <meta charset="UTF-8">
 <title>Title</title>
